Fix bibtext Allow at most 12 authors before putting "et al."

--- a/fig_plis/Yaourt.bib
+++ b/fig_plis/Yaourt.bib
@@ -99,17 +99,17 @@
 @Article{Bijlaard1946,
   Title                    = {{On the elastic stability of thin plates supported by a continuous medium}},
   Author                   = {Bijlaard, P. P.},
-  Journal                  = {R. Dutch Acdemy Sci. Proc.},
+  Journal                  = {R. Dutch Acad. Sci. Proc.},
   Year                     = {1946},
-  Pages                    = {1189----1199},
+  Pages                    = {1189--1199},
   Volume                   = {49},
 
   Owner                    = {mathieu},
-  Timestamp                = {2015.01.09}
+  Timestamp                = {2015.01.22}
 }
 
 @Article{Biot1964,
-  Title                    = {{Theory of Buckling of a Porous Slab and Its Thermoelastic Analogy}},
+  Title                    = {{Theory of buckling of a porous slab and its thermoelastic analogy}},
   Author                   = {Biot, M. A.},
   Journal                  = {J. Appl. Mech.},
   Year                     = {1964},
@@ -118,15 +118,15 @@
   Volume                   = {31},
 
   Doi                      = {10.1115/1.3629586},
-  File                     = {:home/mathieu/Documents/Mendeley Desktop/1964/Journal of Applied Mechanics/Biot - 1964 - Theory of Buckling of a Porous Slab and Its Thermoelastic Analogy.PDF:PDF},
+  File                     = {:home/mathieu/Documents/Mendeley Desktop/1964/Journal of Applied Mechanics/Biot - 1964 - Theory of buckling of a porous slab and its thermoelastic analogy.PDF:PDF},
   ISSN                     = {00218936},
   Owner                    = {mathieu},
-  Timestamp                = {2015.01.09},
+  Timestamp                = {2015.01.22},
   Url                      = {http://appliedmechanics.asmedigitalcollection.asme.org/article.aspx?articleid=1396307}
 }
 
 @Article{Biot1957,
-  Title                    = {{Folding Instability of a Layered Viscoelastic Medium under Compression}},
+  Title                    = {{Folding instability of a layered viscoelastic medium under compression}},
   Author                   = {Biot, M. A.},
   Journal                  = {Proc. R. Soc. A Math. Phys. Eng. Sci.},
   Year                     = {1957},
@@ -137,8 +137,10 @@
   Volume                   = {242},
 
   Doi                      = {10.1098/rspa.1957.0187},
-  File                     = {:home/mathieu/Documents/Mendeley Desktop/1957/Proceedings of the Royal Society A Mathematical, Physical and Engineering Sciences/Biot - 1957 - Folding Instability of a Layered Viscoelastic Medium under Compression.PDF:PDF;:home/mathieu/Documents/Mendeley Desktop/1957/Proceedings of the Royal Society A Mathematical, Physical and Engineering Sciences/Biot - 1957 - Folding Instability of a Layered Viscoelastic Medium under Compression.pdf:pdf},
+  File                     = {:home/mathieu/Documents/Mendeley Desktop/1957/Proceedings of the Royal Society A Mathematical, Physical and Engineering Sciences/Biot - 1957 - Folding instability of a layered viscoelastic medium under compression.PDF:PDF;:home/mathieu/Documents/Mendeley Desktop/1957/Proceedings of the Royal Society A Mathematical, Physical and Engineering Sciences/Biot - 1957 - Folding instability of a layered viscoelastic medium under compression.pdf:pdf},
   ISSN                     = {1364-5021},
+  Owner                    = {mathieu},
+  Timestamp                = {2015.01.22},
   Url                      = {http://rspa.royalsocietypublishing.org/cgi/doi/10.1098/rspa.1957.0187}
 }
 
@@ -330,7 +332,7 @@
 }
 
 @Article{Cerda2003,
-  Title                    = {{Geometry and Physics of Wrinkling}},
+  Title                    = {{Geometry and physics of wrinkling}},
   Author                   = {Cerda, E. and Mahadevan, L.},
   Journal                  = {Phys. Rev. Lett.},
   Year                     = {2003},
@@ -341,8 +343,10 @@
   Volume                   = {90},
 
   Doi                      = {10.1103/PhysRevLett.90.074302},
-  File                     = {:home/mathieu/Documents/Mendeley Desktop/2003/Physical Review Letters/Cerda, Mahadevan - 2003 - Geometry and Physics of Wrinkling.pdf:pdf},
+  File                     = {:home/mathieu/Documents/Mendeley Desktop/2003/Physical Review Letters/Cerda, Mahadevan - 2003 - Geometry and physics of wrinkling.pdf:pdf},
   ISSN                     = {0031-9007},
+  Owner                    = {mathieu},
+  Timestamp                = {2015.01.22},
   Url                      = {http://link.aps.org/doi/10.1103/PhysRevLett.90.074302}
 }
 
@@ -433,7 +437,7 @@
 }
 
 @Article{Ciarletta2014,
-  Title                    = {{Pattern Selection in Growing Tubular Tissues}},
+  Title                    = {{Pattern selection in growing tubular tissues}},
   Author                   = {Ciarletta, P. and Balbi, V. and Kuhl, E.},
   Journal                  = {Phys. Rev. Lett.},
   Year                     = {2014},
@@ -444,10 +448,10 @@
   Volume                   = {113},
 
   Doi                      = {10.1103/PhysRevLett.113.248101},
-  File                     = {:home/mathieu/Documents/Mendeley Desktop/2014/Physical Review Letters/Ciarletta, Balbi, Kuhl - 2014 - Pattern Selection in Growing Tubular Tissues.pdf:pdf},
+  File                     = {:home/mathieu/Documents/Mendeley Desktop/2014/Physical Review Letters/Ciarletta, Balbi, Kuhl - 2014 - Pattern selection in growing tubular tissues.pdf:pdf},
   ISSN                     = {0031-9007},
   Owner                    = {mathieu},
-  Timestamp                = {2015.01.09},
+  Timestamp                = {2015.01.22},
   Url                      = {http://link.aps.org/doi/10.1103/PhysRevLett.113.248101}
 }
 
@@ -619,7 +623,10 @@
   Journal                  = {Netherl. Milk Dairy J.},
   Year                     = {1986},
   Pages                    = {3--30},
-  Volume                   = {40}
+  Volume                   = {40},
+
+  Owner                    = {mathieu},
+  Timestamp                = {2015.01.22}
 }
 
 @Article{Dimonte1998,
@@ -659,15 +666,18 @@
 
   Month                    = apr,
   Number                   = {4},
-  Pages                    = {293--7},
+  Pages                    = {293--297},
   Volume                   = {4},
 
   Abstract                 = {Stiff thin films on soft substrates are both ancient and commonplace in nature; for instance, animal skin comprises a stiff epidermis attached to a soft dermis. Although more recent and rare, artificial skins are increasingly used in a broad range of applications, including flexible electronics, tunable diffraction gratings, force spectroscopy in cells, modern metrology methods, and other devices. Here we show that model elastomeric artificial skins wrinkle in a hierarchical pattern consisting of self-similar buckles extending over five orders of magnitude in length scale, ranging from a few nanometres to a few millimetres. We provide a mechanism for the formation of this hierarchical wrinkling pattern, and quantify our experimental findings with both computations and a simple scaling theory. This allows us to harness the substrates for applications. In particular, we show how to use the multigeneration-wrinkled substrate for separating particles based on their size, while simultaneously forming linear chains of monodisperse particles.},
   Doi                      = {10.1038/nmat1342},
-  File                     = {:home/mathieu/Documents/Mendeley Desktop/2005/Nature materials/Efimenko et al. - 2005 - Nested self-similar wrinkling patterns in skins.pdf:pdf},
+  File                     = {:home/mathieu/Documents/Mendeley Desktop/2005/Nature materials/Efimenko et al. - 2005 - Nested self-similar wrinkling patterns in skins(2).pdf:pdf},
+  ISBN                     = {1476-1122},
   ISSN                     = {1476-1122},
-  Keywords                 = {Cross-Linking Reagents,Cross-Linking Reagents: pharmacology,Humans,Microscopy,Microscopy, Electron, Scanning,Models, Statistical,Nanotechnology,Ozone,Skin,Skin Aging,Skin, Artificial,Skin: pathology,Spectrophotometry,Temperature,Time Factors,Ultraviolet Rays},
+  Keywords                 = {Artificial,Cross-Linking Reagents,Cross-Linking Reagents: pharmacology,Electron,Humans,Microscopy,Models,Nanotechnology,Ozone,Scanning,Skin,Skin Aging,Skin: pathology,Spectrophotometry,Statistical,Temperature,Time Factors,Ultraviolet Rays},
+  Owner                    = {mathieu},
   Pmid                     = {15750598},
+  Timestamp                = {2015.01.22},
   Url                      = {http://www.ncbi.nlm.nih.gov/pubmed/15750598}
 }
 
@@ -689,32 +699,19 @@
 @Article{Genzer2006,
   Title                    = {{Soft matter with hard skin: From skin wrinkles to templating and material characterization}},
   Author                   = {Genzer, Jan and Groenewold, Jan},
-  Journal                  = {Soft Matter},
   Year                     = {2006},
   Number                   = {4},
-  Pages                    = {310},
+  Pages                    = {310--323},
   Volume                   = {2},
 
+  Abstract                 = {TheEnglish-languagedictionarydefineswrinklesas‘‘smallfurrows,ridges,orcreasesonanormally smooth surface, caused by crumpling, folding, or shrinking’’. In this paper we review the scientific aspects of wrinkling and the related phenomenon of buckling. Specifically, we discuss how and why wrinkles/buckles form in various materials. We also describe several examples from everyday life, which demonstrate that wrinkling or buckling is indeed a commonplace phenomenon that spans a multitude of length scales. We will emphasize that wrinkling is not always a frustrating feature (e.g., wrinkles in human skin), as it can help to assemble new structures, understand important physical phenomena, and even assist in characterizing chief material properties.},
+  Booktitle                = {Soft Matter},
   Doi                      = {10.1039/b516741h},
   File                     = {:home/mathieu/Documents/Mendeley Desktop/2006/Soft Matter/Genzer, Groenewold - 2006 - Soft matter with hard skin From skin wrinkles to templating and material characterization.pdf:pdf},
-  ISSN                     = {1744-683X},
-  Url                      = {http://xlink.rsc.org/?DOI=b516741h}
-}
-
-@Article{Genzer2006a,
-  Title                    = {{Soft matter with hard skin: From skin wrinkles to templating and material characterization}},
-  Author                   = {Genzer, Jan and Groenewold, Jan},
-  Journal                  = {Soft Matter},
-  Year                     = {2006},
-  Number                   = {4},
-  Pages                    = {310},
-  Volume                   = {2},
-
-  Doi                      = {10.1039/b516741h},
-  File                     = {:home/mathieu/Documents/Mendeley Desktop/2006/Soft Matter/Genzer, Groenewold - 2006 - Soft matter with hard skin From skin wrinkles to templating and material characterization.pdf:pdf},
+  ISBN                     = {1744-683X},
   ISSN                     = {1744-683X},
   Owner                    = {mathieu},
-  Timestamp                = {2015.01.09},
+  Timestamp                = {2015.01.22},
   Url                      = {http://xlink.rsc.org/?DOI=b516741h}
 }
 
@@ -757,11 +754,11 @@
   Author                   = {Gough, GS and Elam, CF and {De Bruyne}, NA},
   Journal                  = {J. R. Aeronaut. Soc.},
   Year                     = {1940},
-  Pages                    = {12----43},
+  Pages                    = {12--43},
   Volume                   = {44},
 
   Owner                    = {mathieu},
-  Timestamp                = {2015.01.09}
+  Timestamp                = {2015.01.22}
 }
 
 @Article{Grenard2013,
@@ -781,18 +778,18 @@
 
 @Article{Guvendiren2010,
   Title                    = {{Solvent induced transition from wrinkles to creases in thin film gels with depth-wise crosslinking gradients}},
-  Author                   = {Guvendiren, Murat and Burdick, Jason a. and Yang, Shu},
+  Author                   = {Guvendiren, Murat and Burdick, Jason A. and Yang, Shu},
   Journal                  = {Soft Matter},
   Year                     = {2010},
   Number                   = {22},
-  Pages                    = {5795},
+  Pages                    = {5795-5801},
   Volume                   = {6},
 
   Doi                      = {10.1039/c0sm00317d},
   File                     = {:home/mathieu/Documents/Mendeley Desktop/2010/Soft Matter/Guvendiren, Burdick, Yang - 2010 - Solvent induced transition from wrinkles to creases in thin film gels with depth-wise crosslinking gr.pdf:pdf},
   ISSN                     = {1744-683X},
   Owner                    = {mathieu},
-  Timestamp                = {2015.01.09},
+  Timestamp                = {2015.01.22},
   Url                      = {http://xlink.rsc.org/?DOI=c0sm00317d}
 }
 
@@ -1043,7 +1040,7 @@
 }
 
 @Article{Kolinski2009,
-  Title                    = {{Shape and Motion of a Ruck in a Rug}},
+  Title                    = {{Shape and motion of a ruck in a rug}},
   Author                   = {Kolinski, John and Aussillous, Pascale and Mahadevan, L.},
   Journal                  = {Phys. Rev. Lett.},
   Year                     = {2009},
@@ -1054,8 +1051,10 @@
   Volume                   = {103},
 
   Doi                      = {10.1103/PhysRevLett.103.174302},
-  File                     = {:home/mathieu/Documents/Mendeley Desktop/2009/Physical Review Letters/Kolinski, Aussillous, Mahadevan - 2009 - Shape and Motion of a Ruck in a Rug.pdf:pdf},
+  File                     = {:home/mathieu/Documents/Mendeley Desktop/2009/Physical Review Letters/Kolinski, Aussillous, Mahadevan - 2009 - Shape and motion of a ruck in a rug.pdf:pdf},
   ISSN                     = {0031-9007},
+  Owner                    = {mathieu},
+  Timestamp                = {2015.01.22},
   Url                      = {http://link.aps.org/doi/10.1103/PhysRevLett.103.174302}
 }
 
@@ -1128,7 +1127,7 @@
 }
 
 @Article{Leocmach2014,
-  Title                    = {{Creep and Fracture of a Protein Gel under Stress}},
+  Title                    = {{Creep and fracture of a protein gel under stress}},
   Author                   = {Leocmach, Mathieu and Perge, Christophe and Divoux, Thibaut and Manneville, S\'{e}bastien},
   Journal                  = {Phys. Rev. Lett.},
   Year                     = {2014},
@@ -1143,10 +1142,10 @@
   Arxivid                  = {1401.8234},
   Doi                      = {10.1103/PhysRevLett.113.038303},
   Eprint                   = {1401.8234},
-  File                     = {:home/mathieu/Documents/Mendeley Desktop/2014/Physical Review Letters/Leocmach et al. - 2014 - Creep and Fracture of a Protein Gel under Stress.pdf:pdf;:home/mathieu/Documents/Mendeley Desktop/2014/Physical Review Letters/Leocmach et al. - 2014 - Creep and Fracture of a Protein Gel under Stress(2).pdf:pdf},
+  File                     = {:home/mathieu/Documents/Mendeley Desktop/2014/Physical Review Letters/Leocmach et al. - 2014 - Creep and fracture of a protein gel under stress.pdf:pdf;:home/mathieu/Documents/Mendeley Desktop/2014/Physical Review Letters/Leocmach et al. - 2014 - Creep and fracture of a protein gel under stress(2).pdf:pdf},
   ISSN                     = {0031-9007},
   Owner                    = {mathieu},
-  Timestamp                = {2015.01.09},
+  Timestamp                = {2015.01.22},
   Url                      = {http://link.aps.org/doi/10.1103/PhysRevLett.113.038303}
 }
 
@@ -1172,6 +1171,7 @@
   Year                     = {2013},
 
   Month                    = sep,
+  Pages                    = {2775},
   Volume                   = {3},
 
   Doi                      = {10.1038/srep02775},
@@ -1197,7 +1197,7 @@
 @Article{Longley2013,
   Title                    = {{How a blister heals}},
   Author                   = {Longley, Jonathan E. and Mahadevan, L. and Chaudhury, Manoj K.},
-  Journal                  = {EPL (Europhysics Lett.},
+  Journal                  = {Europhys. Lett.},
   Year                     = {2013},
 
   Month                    = nov,
@@ -1206,8 +1206,10 @@
   Volume                   = {104},
 
   Doi                      = {10.1209/0295-5075/104/46002},
-  File                     = {:home/mathieu/Documents/Mendeley Desktop/2013/EPL (Europhysics Letters)/Longley, Mahadevan, Chaudhury - 2013 - How a blister heals.pdf:pdf},
+  File                     = {:home/mathieu/Documents/Mendeley Desktop/2013/Europhysics Letters/Longley, Mahadevan, Chaudhury - 2013 - How a blister heals.pdf:pdf},
   ISSN                     = {0295-5075},
+  Owner                    = {mathieu},
+  Timestamp                = {2015.01.22},
   Url                      = {http://stacks.iop.org/0295-5075/104/i=4/a=46002?key=crossref.286ffce0194dd633e5a79dcb2872c6ba}
 }
 
@@ -1237,15 +1239,22 @@
   Journal                  = {Soft Matter},
   Year                     = {2014},
 
-  Month                    = nov,
+  Month                    = apr,
+  Number                   = {16},
+  Pages                    = {2800--2804},
+  Volume                   = {10},
 
+  Abstract                 = {When stretched uniaxially, a thin elastic sheet may exhibit buckling. The occurrence of buckling depends on the geometrical properties of the sheet and the magnitude of the applied strain. Here we show that an elastomeric sheet initially stable under uniaxial stretching can destabilize when exposed to a solvent that swells the elastomer. We demonstrate experimentally and computationally that the features of the buckling pattern depend on the magnitude of stretching, and this observation offers a new way for controlling the shape of a swollen homogeneous thin sheet.},
   Archiveprefix            = {arXiv},
   Arxivid                  = {1311.5435},
   Doi                      = {10.1039/c3sm52941j},
   Eprint                   = {1311.5435},
   File                     = {:home/mathieu/Documents/Mendeley Desktop/2014/Soft Matter/Lucantonio et al. - 2014 - Buckling dynamics of a solvent-stimulated stretched elastomeric sheet.pdf:pdf},
   ISSN                     = {1744-683X},
-  Url                      = {http://arxiv.org/abs/1311.5435 http://pubs.rsc.org/en/Content/ArticleLanding/2014/SM/c3sm52941j}
+  Owner                    = {mathieu},
+  Pmid                     = {24668079},
+  Timestamp                = {2015.01.22},
+  Url                      = {http://arxiv.org/abs/1311.5435 http://pubs.rsc.org/en/Content/ArticleLanding/2014/SM/c3sm52941j http://www.ncbi.nlm.nih.gov/pubmed/24668079 http://xlink.rsc.org/?DOI=c3sm52941j}
 }
 
 @Article{Lucey2002,
@@ -1269,7 +1278,7 @@
 
 @Article{Ma2004,
   Title                    = {{Cracks in the palisade cuticle of soybean seed coats correlate with their permeability to water.}},
-  Author                   = {Ma, Fengshan and Cholewa, Ewa and Mohamed, Tasneem and Peterson, Carol a and Gijzen, Mark},
+  Author                   = {Ma, Fengshan and Cholewa, Ewa and Mohamed, Tasneem and Peterson, Carol A and Gijzen, Mark},
   Journal                  = {Ann. Bot.},
   Year                     = {2004},
 
@@ -1282,10 +1291,10 @@
   Doi                      = {10.1093/aob/mch133},
   File                     = {:home/mathieu/Documents/Mendeley Desktop/2004/Annals of botany/Ma et al. - 2004 - Cracks in the palisade cuticle of soybean seed coats correlate with their permeability to water.pdf:pdf},
   ISSN                     = {0305-7364},
-  Keywords                 = {Cell Membrane Permeability,Cell Membrane Permeability: physiology,Cell Surface Extensions,Cell Surface Extensions: physiology,Microscopy, Electron, Scanning Transmission,Plant Epidermis,Plant Epidermis: physiology,Plant Epidermis: ultrastructure,Seeds,Seeds: physiology,Seeds: ultrastructure,Soybeans,Soybeans: physiology,Soybeans: ultrastructure,Water,Water: metabolism},
+  Keywords                 = {Cell Membrane Permeability,Cell Membrane Permeability: physiology,Cell Surface Extensions,Cell Surface Extensions: physiology,Electron,Microscopy,Plant Epidermis,Plant Epidermis: physiology,Plant Epidermis: ultrastructure,Scanning Transmission,Seeds,Seeds: physiology,Seeds: ultrastructure,Soybeans,Soybeans: physiology,Soybeans: ultrastructure,Water,Water: metabolism},
   Owner                    = {mathieu},
   Pmid                     = {15217785},
-  Timestamp                = {2015.01.09},
+  Timestamp                = {2015.01.22},
   Url                      = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=4242158\&tool=pmcentrez\&rendertype=abstract}
 }
 
@@ -1520,14 +1529,14 @@
   Journal                  = {Soft Matter},
   Year                     = {2013},
   Number                   = {46},
-  Pages                    = {10985},
+  Pages                    = {10985--10992},
   Volume                   = {9},
 
   Doi                      = {10.1039/c3sm51825f},
   File                     = {:home/mathieu/Documents/Mendeley Desktop/2013/Soft Matter/Pi\~{n}eirua et al. - 2013 - Capillary buckling of a floating annulus.pdf:pdf},
   ISSN                     = {1744-683X},
   Owner                    = {mathieu},
-  Timestamp                = {2015.01.09},
+  Timestamp                = {2015.01.22},
   Url                      = {http://xlink.rsc.org/?DOI=c3sm51825f}
 }
 
@@ -1717,7 +1726,7 @@
 
 @Article{Savin2011,
   Title                    = {{On the growth and form of the gut.}},
-  Author                   = {Savin, Thierry and Kurpios, Natasza a and Shyer, Amy E and Florescu, Patricia and Liang, Haiyi and Mahadevan, L and Tabin, Clifford J},
+  Author                   = {Savin, Thierry and Kurpios, Natasza A and Shyer, Amy E and Florescu, Patricia and Liang, Haiyi and Mahadevan, L and Tabin, Clifford J},
   Journal                  = {Nature},
   Year                     = {2011},
 
@@ -1730,12 +1739,12 @@
   Doi                      = {10.1038/nature10277},
   File                     = {:home/mathieu/Documents/Mendeley Desktop/2011/Nature/Savin et al. - 2011 - On the growth and form of the gut.pdf:pdf},
   ISSN                     = {1476-4687},
-  Keywords                 = {Animals,Biomechanical Phenomena,Chick Embryo,Computer Simulation,Elasticity,Female,Finches,Finches: embryology,Intestines,Intestines: anatomy \& histology,Intestines: embryology,Mesentery,Mesentery: anatomy \& histology,Mesentery: embryology,Mice,Models, Anatomic,Models, Biological,Quail,Quail: embryology,Rotation,Rubber},
+  Keywords                 = {Anatomic,Animals,Biological,Biomechanical Phenomena,Chick Embryo,Computer Simulation,Elasticity,Female,Finches,Finches: embryology,Intestines,Intestines: anatomy \& histology,Intestines: embryology,Mesentery,Mesentery: anatomy \& histology,Mesentery: embryology,Mice,Models,Quail,Quail: embryology,Rotation,Rubber},
   Owner                    = {mathieu},
   Pmid                     = {21814276},
   Publisher                = {Nature Publishing Group},
-  Timestamp                = {2015.01.09},
-  Url                      = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3335276\&tool=pmcentrez\&rendertype=abstract}
+  Timestamp                = {2015.01.22},
+  Url                      = {http://www.nature.com/nature/journal/v476/n7358/full/nature10277.html}
 }
 
 @Article{Schroll2011,
@@ -1763,15 +1772,19 @@
 
   Month                    = oct,
   Number                   = {6155},
-  Pages                    = {212--8},
+  Pages                    = {212--218},
   Volume                   = {342},
 
   Abstract                 = {The villi of the human and chick gut are formed in similar stepwise progressions, wherein the mesenchyme and attached epithelium first fold into longitudinal ridges, then a zigzag pattern, and lastly individual villi. We find that these steps of villification depend on the sequential differentiation of the distinct smooth muscle layers of the gut, which restrict the expansion of the growing endoderm and mesenchyme, generating compressive stresses that lead to their buckling and folding. A quantitative computational model, incorporating measured properties of the developing gut, recapitulates the morphological patterns seen during villification in a variety of species. These results provide a mechanistic understanding of the formation of these elaborations of the lining of the gut, essential for providing sufficient surface area for nutrient absorption.},
   Doi                      = {10.1126/science.1238842},
   File                     = {:home/mathieu/Documents/Mendeley Desktop/2013/Science (New York, N.Y.)/Shyer et al. - 2013 - Villification how the gut gets its villi.pdf:pdf},
+  ISBN                     = {1095-9203 (Electronic)$\backslash$r0036-8075 (Linking)},
   ISSN                     = {1095-9203},
+  Keywords                 = {Animals,Biological,Chick Embryo,Endoderm,Endoderm: growth \& development,Gastrointestinal Tract,Gastrointestinal Tract: embryology,Gastrointestinal Tract: ultrastructure,Humans,Mesoderm,Mesoderm: growth \& development,Mice,Models,Morphogenesis,Muscle,Smooth,Smooth: embryology,Xenopus},
+  Owner                    = {mathieu},
   Pmid                     = {23989955},
-  Url                      = {http://www.ncbi.nlm.nih.gov/pubmed/23989955}
+  Timestamp                = {2015.01.22},
+  Url                      = {http://www.ncbi.nlm.nih.gov/pubmed/23989955 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=4045245\&tool=pmcentrez\&rendertype=abstract}
 }
 
 @Article{Smoluchowski1927,
@@ -1786,6 +1799,19 @@
   File                     = {:home/mathieu/Documents/Mendeley Desktop/1927/Pisma Mariana Smoluchowskiego/Smoluchowski - 1927 - Versuche \"{u}ber Faltungserscheinungen schwimmender elastischer Platten.pdf:pdf},
   Owner                    = {mathieu},
   Timestamp                = {2015.01.09}
+}
+
+@Article{Smoluchowski1910,
+  Title                    = {{Versuche \"{u}ber Faltungserscheinungen schwimmender elastischer Platten}},
+  Author                   = {Smoluchowski, Marian},
+  Journal                  = {Akad. Wiss. Krakau. Math. Kl.},
+  Year                     = {1910},
+  Pages                    = {227--234},
+  Volume                   = {2},
+
+  File                     = {:home/mathieu/Documents/Mendeley Desktop/1910/Akad. Wiss. Krakau. Math. Kl/Smoluchowski - 1910 - Versuche \"{u}ber Faltungserscheinungen schwimmender elastischer Platten.pdf:pdf},
+  Owner                    = {mathieu},
+  Timestamp                = {2015.01.22}
 }
 
 @Article{Sollich1998,
@@ -1880,15 +1906,17 @@
 
   Month                    = mar,
   Number                   = {6},
-  Pages                    = {2011--6},
+  Pages                    = {2011--2016},
   Volume                   = {110},
 
   Abstract                 = {Wrinkled morphology is a distinctive phenotype observed in mature biofilms produced by a great number of bacteria. Here we study the formation of macroscopic structures (wrinkles and folds) observed during the maturation of Bacillus subtilis pellicles in relation to their mechanical response. We show how the mechanical buckling instability can explain their formation. By performing simple tests, we highlight the role of confining geometry and growth in determining the symmetry of wrinkles. We also experimentally demonstrate that the pellicles are soft elastic materials for small deformations induced by a tensile device. The wrinkled structures are then described by using the equations of elastic plates, which include the growth process as a simple parameter representing biomass production. This growth controls buckling instability, which triggers the formation of wrinkles. We also describe how the structure of ripples is modified when capillary effects are dominant. Finally, the experiments performed on a mutant strain indicate that the presence of an extracellular matrix is required to maintain a connective and elastic pellicle.},
   Doi                      = {10.1073/pnas.1217178110},
   File                     = {:home/mathieu/Documents/Mendeley Desktop/2013/Proceedings of the National Academy of Sciences of the United States of America/Trejo et al. - 2013 - Elasticity and wrinkled morphology of Bacillus subtilis pellicles.pdf:pdf},
   ISSN                     = {1091-6490},
-  Keywords                 = {Bacillus subtilis,Bacillus subtilis: cytology,Bacillus subtilis: growth \& development,Bacillus subtilis: physiology,Biofilms,Biofilms: growth \& development,Biomechanical Phenomena,Elasticity,Mathematical Concepts,Models, Biological,Phenotype},
+  Keywords                 = {Bacillus subtilis,Bacillus subtilis: cytology,Bacillus subtilis: growth \& development,Bacillus subtilis: physiology,Biofilms,Biofilms: growth \& development,Biological,Biomechanical Phenomena,Elasticity,Mathematical Concepts,Models,Phenotype},
+  Owner                    = {mathieu},
   Pmid                     = {23341623},
+  Timestamp                = {2015.01.22},
   Url                      = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3568355\&tool=pmcentrez\&rendertype=abstract}
 }
 
@@ -1929,18 +1957,39 @@
   Url                      = {http://www.ncbi.nlm.nih.gov/pubmed/10984168}
 }
 
+@Article{Vandeparre2008,
+  Title                    = {{Wrinkling of stimuloresponsive surfaces: mechanical instability coupled to diffusion}},
+  Author                   = {Vandeparre, Hugues and Damman, Pascal},
+  Journal                  = {Phys. Rev. Lett.},
+  Year                     = {2008},
+
+  Month                    = sep,
+  Number                   = {12},
+  Pages                    = {124301},
+  Volume                   = {101},
+
+  Doi                      = {10.1103/PhysRevLett.101.124301},
+  File                     = {:home/mathieu/Documents/Mendeley Desktop/2008/Physical Review Letters/Vandeparre, Damman - 2008 - Wrinkling of stimuloresponsive surfaces mechanical instability coupled to diffusion.pdf:pdf},
+  ISSN                     = {0031-9007},
+  Owner                    = {mathieu},
+  Timestamp                = {2015.01.22},
+  Url                      = {http://link.aps.org/doi/10.1103/PhysRevLett.101.124301}
+}
+
 @Article{Vandeparre2011,
   Title                    = {{Confined wrinkling: impact on pattern morphology and periodicity}},
   Author                   = {Vandeparre, Hugues and Desbief, Simon and Lazzaroni, Roberto and Gay, Cyprien and Damman, Pascal},
   Journal                  = {Soft Matter},
   Year                     = {2011},
   Number                   = {15},
-  Pages                    = {6878},
+  Pages                    = {6878--6882},
   Volume                   = {7},
 
   Doi                      = {10.1039/c1sm05411b},
   File                     = {:home/mathieu/Documents/Mendeley Desktop/2011/Soft Matter/Vandeparre et al. - 2011 - Confined wrinkling impact on pattern morphology and periodicity.pdf:pdf},
   ISSN                     = {1744-683X},
+  Owner                    = {mathieu},
+  Timestamp                = {2015.01.22},
   Url                      = {http://xlink.rsc.org/?DOI=c1sm05411b}
 }
 
@@ -1965,7 +2014,7 @@
 }
 
 @Article{Vandeparre2011a,
-  Title                    = {{Wrinkling Hierarchy in Constrained Thin Sheets from Suspended Graphene to Curtains}},
+  Title                    = {{Wrinkling hierarchy in constrained thin sheets from suspended graphene to curtains}},
   Author                   = {Vandeparre, Hugues and Pi\~{n}eirua, Miguel and Brau, Fabian and Roman, Benoit and Bico, Jos\'{e} and Gay, Cyprien and Bao, Wenzhong and Lau, Chun Ning and Reis, Pedro M. and Damman, Pascal},
   Journal                  = {Phys. Rev. Lett.},
   Year                     = {2011},
@@ -1976,10 +2025,10 @@
   Volume                   = {106},
 
   Doi                      = {10.1103/PhysRevLett.106.224301},
-  File                     = {:home/mathieu/Documents/Mendeley Desktop/2011/Physical Review Letters/Vandeparre et al. - 2011 - Wrinkling Hierarchy in Constrained Thin Sheets from Suspended Graphene to Curtains.pdf:pdf},
+  File                     = {:home/mathieu/Documents/Mendeley Desktop/2011/Physical Review Letters/Vandeparre et al. - 2011 - Wrinkling hierarchy in constrained thin sheets from suspended graphene to curtains.pdf:pdf},
   ISSN                     = {0031-9007},
   Owner                    = {mathieu},
-  Timestamp                = {2015.01.09},
+  Timestamp                = {2015.01.22},
   Url                      = {http://link.aps.org/doi/10.1103/PhysRevLett.106.224301}
 }
 
@@ -2008,19 +2057,21 @@
 
   Month                    = jul,
   Number                   = {27},
-  Pages                    = {10901--6},
+  Pages                    = {10901--10906},
   Volume                   = {106},
 
   Abstract                 = {The wrinkling and delamination of stiff thin films adhered to a polymer substrate have important applications in "flexible electronics." The resulting periodic structures, when used for circuitry, have remarkable mechanical properties because stretching or twisting of the substrate is mostly accommodated through bending of the film, which minimizes fatigue or fracture. To date, applications in this context have used substrate patterning to create an anisotropic substrate-film adhesion energy, thereby producing a controlled array of delamination "blisters." However, even in the absence of such patterning, blisters appear spontaneously, with a characteristic size. Here, we perform well-controlled experiments at macroscopic scales to study what sets the dimensions of these blisters in terms of the material properties and explain our results by using a combination of scaling and analytical methods. Besides pointing to a method for determining the interfacial toughness, our analysis suggests a number of design guidelines for the thin films used in flexible electronic applications. Crucially, we show that, to avoid the possibility that delamination may cause fatigue damage, the thin film thickness must be greater than a critical value, which we determine.},
   Doi                      = {10.1073/pnas.0902160106},
   File                     = {:home/mathieu/Documents/Mendeley Desktop/2009/Proceedings of the National Academy of Sciences of the United States of America/Vella et al. - 2009 - The macroscopic delamination of thin films from elastic substrates.pdf:pdf},
   ISSN                     = {1091-6490},
+  Owner                    = {mathieu},
   Pmid                     = {19556551},
+  Timestamp                = {2015.01.22},
   Url                      = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=2708712\&tool=pmcentrez\&rendertype=abstract}
 }
 
 @Article{Vella2009,
-  Title                    = {{Statics and Inertial Dynamics of a Ruck in a Rug}},
+  Title                    = {{Statics and inertial dynamics of a ruck in a rug}},
   Author                   = {Vella, Dominic and Boudaoud, Arezki and Adda-Bedia, Mokhtar},
   Journal                  = {Phys. Rev. Lett.},
   Year                     = {2009},
@@ -2031,8 +2082,10 @@
   Volume                   = {103},
 
   Doi                      = {10.1103/PhysRevLett.103.174301},
-  File                     = {:home/mathieu/Documents/Mendeley Desktop/2009/Physical Review Letters/Vella, Boudaoud, Adda-Bedia - 2009 - Statics and Inertial Dynamics of a Ruck in a Rug.pdf:pdf},
+  File                     = {:home/mathieu/Documents/Mendeley Desktop/2009/Physical Review Letters/Vella, Boudaoud, Adda-Bedia - 2009 - Statics and inertial dynamics of a ruck in a rug.pdf:pdf},
   ISSN                     = {0031-9007},
+  Owner                    = {mathieu},
+  Timestamp                = {2015.01.22},
   Url                      = {http://link.aps.org/doi/10.1103/PhysRevLett.103.174301}
 }
 
